[package]
name = "wgpu-window-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "0.18" 
pollster = "0.3"
log = "0.4"
env_logger = "0.10"
